--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
+    "@react-google-maps/api": "^2.20.6",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "react-router-dom": "^7.6.0",
     "vite": "^6.3.1"
   }
 }
