--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/css": "^11.13.5",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@react-google-maps/api": "^2.20.6",
     "framer-motion": "^12.9.4",
     "react": "^19.0.0",
